      * Dropped, Ubuntu specific
  * debian/control.in: Bump b-d on glib
  * debian/control.in: Rename libmutter0a to libmutter0b for more ABI fun
  * d/p/10_Always-send-_NET_WM_FRAME_DRAWN-for-newly-created-wi.patch:
    + Added. Fix a race causing _NET_WM_FRAME_DRAWN to not be sent in context
    menus. (From upstream git, BGO#694771)

  [ Emilio Pozuelo Monfort ]
  * New upstream release.

 -- Sjoerd Simons <sjoerd@debian.org>  Mon, 04 Mar 2013 22:12:55 +0100

mutter (3.7.5-0ubuntu1~raring1) raring; urgency=medium

  [ Jeremy Bicha ]
  * New upstream release.
  * debian/control.in:
    - Bump minimum clutter & gsettings-desktop-schemas

  [ Rico Tzschichholz ]
  * debian/control.in:
    - Build-depend on libxi-dev
  * debian/patches/01_Wcast-align.patch: Refreshed
  * debian/patches/05_ignore_num_workspaces.patch:
    - Dropped, applied in new version

 -- Jeremy Bicha <jbicha@ubuntu.com>  Tue, 05 Feb 2013 20:58:05 -0500

mutter (3.6.2-0ubuntu1) raring; urgency=low

  * New upstream release (LP: #1078155)

 -- Jeremy Bicha <jbicha@ubuntu.com>  Mon, 12 Nov 2012 22:09:47 -0500

mutter (3.6.1-1ubuntu2) raring; urgency=low

  * Added 05_ignore_num_workspaces.patch (LP: #1067933)

 -- Brandon Snider <brandonjsnider@gmail.com>  Wed, 17 Oct 2012 20:23:11 -0400

mutter (3.6.1-1ubuntu1) raring; urgency=low

  * Sync with Debian. Remaining change:
    - 04_ignore_shadow_and_padding.patch: Silently ignore
      padding and shadow tags

 -- Jeremy Bicha <jbicha@ubuntu.com>  Thu, 08 Nov 2012 08:37:27 -0500

mutter (3.6.1-1) experimental; urgency=low

  * New upstream release

 -- Sjoerd Simons <sjoerd@debian.org>  Wed, 17 Oct 2012 19:58:10 +0200

mutter (3.6.0-1) experimental; urgency=low

  * New upstream release
  * Sync with Ubuntu:
    - Drop unnecessary gnome-doc-utils install
  * d/p/00_meta_window_move_frame-fix-crash-when-frame-is-NULL.patch:
    Dropped: fixed upstream
  * debian/control.in: Rename libmutter0 to libmutter0a as the libmutter ABI
    broke
